--- a/DPPHUB1_1(firststart).ioc
+++ b/DPPHUB1_1(firststart).ioc
@@ -6,20 +6,58 @@ CAN1.IPParameters=CalculateTimeQuantum,Prescaler,BS1,BS2
 CAN1.Prescaler=3
 Dma.Request0=USART3_TX
 Dma.Request1=USART3_RX
-Dma.Request2=USART6_TX
-Dma.Request3=USART6_RX
-Dma.Request4=USART1_RX
-Dma.RequestsNb=5
-Dma.USART1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART1_RX.4.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART1_RX.4.Instance=DMA2_Stream2
-Dma.USART1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART1_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.USART1_RX.4.Mode=DMA_CIRCULAR
-Dma.USART1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART1_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.USART1_RX.4.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.Request2=USART6_RX
+Dma.Request3=USART1_RX
+Dma.Request4=USART1_TX
+Dma.Request5=SDIO_RX
+Dma.Request6=SDIO_TX
+Dma.RequestsNb=7
+Dma.SDIO_RX.5.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.5.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.5.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.5.Instance=DMA2_Stream3
+Dma.SDIO_RX.5.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.5.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.5.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.5.Mode=DMA_PFCTRL
+Dma.SDIO_RX.5.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.5.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.5.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.5.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SDIO_RX.5.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.6.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.6.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.6.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.6.Instance=DMA2_Stream6
+Dma.SDIO_TX.6.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.6.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.6.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.6.Mode=DMA_PFCTRL
+Dma.SDIO_TX.6.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.6.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.6.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.6.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SDIO_TX.6.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.USART1_RX.3.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART1_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_RX.3.Instance=DMA2_Stream2
+Dma.USART1_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_RX.3.MemInc=DMA_MINC_ENABLE
+Dma.USART1_RX.3.Mode=DMA_CIRCULAR
+Dma.USART1_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_RX.3.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_RX.3.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART1_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART1_TX.4.Direction=DMA_MEMORY_TO_PERIPH
+Dma.USART1_TX.4.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART1_TX.4.Instance=DMA2_Stream7
+Dma.USART1_TX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART1_TX.4.MemInc=DMA_MINC_ENABLE
+Dma.USART1_TX.4.Mode=DMA_NORMAL
+Dma.USART1_TX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART1_TX.4.PeriphInc=DMA_PINC_DISABLE
+Dma.USART1_TX.4.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.USART1_TX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 Dma.USART3_RX.1.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART3_RX.1.FIFOMode=DMA_FIFOMODE_DISABLE
 Dma.USART3_RX.1.Instance=DMA1_Stream1
@@ -40,65 +78,69 @@ Dma.USART3_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
 Dma.USART3_TX.0.PeriphInc=DMA_PINC_DISABLE
 Dma.USART3_TX.0.Priority=DMA_PRIORITY_VERY_HIGH
 Dma.USART3_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_RX.3.Direction=DMA_PERIPH_TO_MEMORY
-Dma.USART6_RX.3.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_RX.3.Instance=DMA2_Stream1
-Dma.USART6_RX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_RX.3.MemInc=DMA_MINC_ENABLE
-Dma.USART6_RX.3.Mode=DMA_NORMAL
-Dma.USART6_RX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_RX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_RX.3.Priority=DMA_PRIORITY_LOW
-Dma.USART6_RX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
-Dma.USART6_TX.2.Direction=DMA_MEMORY_TO_PERIPH
-Dma.USART6_TX.2.FIFOMode=DMA_FIFOMODE_DISABLE
-Dma.USART6_TX.2.Instance=DMA2_Stream6
-Dma.USART6_TX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.USART6_TX.2.MemInc=DMA_MINC_ENABLE
-Dma.USART6_TX.2.Mode=DMA_NORMAL
-Dma.USART6_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.USART6_TX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.USART6_TX.2.Priority=DMA_PRIORITY_VERY_HIGH
-Dma.USART6_TX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+Dma.USART6_RX.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.USART6_RX.2.FIFOMode=DMA_FIFOMODE_DISABLE
+Dma.USART6_RX.2.Instance=DMA2_Stream1
+Dma.USART6_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
+Dma.USART6_RX.2.MemInc=DMA_MINC_ENABLE
+Dma.USART6_RX.2.Mode=DMA_NORMAL
+Dma.USART6_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
+Dma.USART6_RX.2.PeriphInc=DMA_PINC_DISABLE
+Dma.USART6_RX.2.Priority=DMA_PRIORITY_LOW
+Dma.USART6_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
+FATFS.IPParameters=USE_DMA_CODE_SD
+FATFS.USE_DMA_CODE_SD=1
 File.Version=6
 KeepUserPlacement=false
 Mcu.Family=STM32F4
 Mcu.IP0=CAN1
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SYS
-Mcu.IP5=USART1
-Mcu.IP6=USART3
-Mcu.IP7=USART6
-Mcu.IP8=USB_DEVICE
-Mcu.IP9=USB_OTG_FS
-Mcu.IPNb=10
+Mcu.IP10=USART6
+Mcu.IP11=USB_DEVICE
+Mcu.IP12=USB_OTG_FS
+Mcu.IP2=FATFS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SDIO
+Mcu.IP7=SYS
+Mcu.IP8=USART1
+Mcu.IP9=USART3
+Mcu.IPNb=13
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PH0-OSC_IN
 Mcu.Pin1=PH1-OSC_OUT
 Mcu.Pin10=PC7
-Mcu.Pin11=PA9
-Mcu.Pin12=PA10
-Mcu.Pin13=PA11
-Mcu.Pin14=PA12
-Mcu.Pin15=PD0
-Mcu.Pin16=PD1
-Mcu.Pin17=PD6
-Mcu.Pin18=PB6
-Mcu.Pin19=PB7
+Mcu.Pin11=PC8
+Mcu.Pin12=PC9
+Mcu.Pin13=PA9
+Mcu.Pin14=PA10
+Mcu.Pin15=PA11
+Mcu.Pin16=PA12
+Mcu.Pin17=PC10
+Mcu.Pin18=PC11
+Mcu.Pin19=PC12
 Mcu.Pin2=PE11
-Mcu.Pin20=VP_SYS_VS_Systick
-Mcu.Pin21=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
+Mcu.Pin20=PD0
+Mcu.Pin21=PD1
+Mcu.Pin22=PD2
+Mcu.Pin23=PD6
+Mcu.Pin24=PB6
+Mcu.Pin25=PB7
+Mcu.Pin26=VP_FATFS_VS_SDIO
+Mcu.Pin27=VP_RTC_VS_RTC_Activate
+Mcu.Pin28=VP_RTC_VS_RTC_Calendar
+Mcu.Pin29=VP_SYS_VS_Systick
 Mcu.Pin3=PE12
+Mcu.Pin30=VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS
 Mcu.Pin4=PE13
 Mcu.Pin5=PE14
 Mcu.Pin6=PE15
 Mcu.Pin7=PB10
 Mcu.Pin8=PD9
 Mcu.Pin9=PC6
-Mcu.PinsNb=22
+Mcu.PinsNb=31
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407VGTx
@@ -113,7 +155,9 @@ NVIC.DMA1_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA1_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream1_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream2_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream3_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DMA2_Stream6_IRQn=true\:0\:0\:false\:false\:true\:false
+NVIC.DMA2_Stream7_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false
@@ -121,6 +165,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.OTG_FS_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:0\:0\:false\:false\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true
@@ -139,12 +184,24 @@ PB10.Mode=Asynchronous
 PB10.Signal=USART3_TX
 PB6.Mode=Asynchronous
 PB6.Signal=USART1_TX
+PB7.GPIOParameters=GPIO_Label
+PB7.GPIO_Label=USART1_DE
 PB7.Locked=true
 PB7.Signal=GPIO_Output
+PC10.Mode=SD_4_bits_Wide_bus
+PC10.Signal=SDIO_D2
+PC11.Mode=SD_4_bits_Wide_bus
+PC11.Signal=SDIO_D3
+PC12.Mode=SD_4_bits_Wide_bus
+PC12.Signal=SDIO_CK
 PC6.Mode=Asynchronous
 PC6.Signal=USART6_TX
 PC7.Mode=Asynchronous
 PC7.Signal=USART6_RX
+PC8.Mode=SD_4_bits_Wide_bus
+PC8.Signal=SDIO_D0
+PC9.Mode=SD_4_bits_Wide_bus
+PC9.Signal=SDIO_D1
 PCC.Checker=false
 PCC.Line=STM32F407/417
 PCC.MCU=STM32F407V(E-G)Tx
@@ -159,6 +216,8 @@ PD0.Signal=CAN1_RX
 PD1.Locked=true
 PD1.Mode=Master
 PD1.Signal=CAN1_TX
+PD2.Mode=SD_4_bits_Wide_bus
+PD2.Signal=SDIO_CMD
 PD6.Locked=true
 PD6.Signal=GPIO_Output
 PD9.Locked=true
@@ -205,7 +264,7 @@ ProjectManager.StackSize=0x4000
 ProjectManager.TargetToolchain=SW4STM32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_CAN1_Init-CAN1-false-HAL-true,5-MX_USART3_UART_Init-USART3-false-HAL-true,6-MX_USART6_UART_Init-USART6-false-HAL-true,7-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true,8-MX_USART1_UART_Init-USART1-false-HAL-true,9-MX_RTC_Init-RTC-false-HAL-true,10-MX_SDIO_SD_Init-SDIO-false-HAL-true,11-MX_FATFS_Init-FATFS-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -222,7 +281,7 @@ RCC.HCLKFreq_Value=168000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
 RCC.I2SClocksFreq_Value=192000000
-RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
+RCC.IPParameters=48MHZClocksFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2SClocksFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,RCC_RTC_Clock_Source_FROM_HSE,RTCFreq_Value,RTCHSEDivFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VcooutputI2S
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
 RCC.MCO2PinFreq_Value=168000000
@@ -231,14 +290,25 @@ RCC.PLLM=4
 RCC.PLLN=168
 RCC.PLLQ=7
 RCC.PLLQCLKFreq_Value=48000000
+RCC.RCC_RTC_Clock_Source_FROM_HSE=RCC_RTCCLKSOURCE_HSE_DIV16
 RCC.RTCFreq_Value=32000
-RCC.RTCHSEDivFreq_Value=4000000
+RCC.RTCHSEDivFreq_Value=500000
 RCC.SYSCLKFreq_VALUE=168000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+RTC.AsynchPrediv=31
+RTC.Date=4
+RTC.Hours=10
+RTC.IPParameters=SynchPrediv,AsynchPrediv,Hours,Minutes,Month,Date,Year
+RTC.Minutes=20
+RTC.Month=RTC_MONTH_JULY
+RTC.SynchPrediv=999
+RTC.Year=19
+SDIO.ClockDiv=10
+SDIO.IPParameters=ClockDiv
 USART1.IPParameters=VirtualMode
 USART1.VirtualMode=VM_ASYNC
 USART3.IPParameters=VirtualMode
@@ -253,6 +323,12 @@ USB_DEVICE.VirtualMode-CDC_FS=Cdc
 USB_DEVICE.VirtualModeFS=Cdc_FS
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
+VP_FATFS_VS_SDIO.Mode=SDIO
+VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
+VP_RTC_VS_RTC_Activate.Mode=RTC_Enabled
+VP_RTC_VS_RTC_Activate.Signal=RTC_VS_RTC_Activate
+VP_RTC_VS_RTC_Calendar.Mode=RTC_Calendar
+VP_RTC_VS_RTC_Calendar.Signal=RTC_VS_RTC_Calendar
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_USB_DEVICE_VS_USB_DEVICE_CDC_FS.Mode=CDC_FS
